IF (BUILD_DOCUMENTATION)
  ADD_CUSTOM_TARGET (
    doc ALL
    DEPENDS html/index.html html.tar.gz
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
  )
  IF (DOXYGEN_EXECUTABLE)
    ADD_CUSTOM_COMMAND (
      OUTPUT html/index.html
      COMMAND ${DOXYGEN_EXECUTABLE}
      DEPENDS Doxyfile mainpage.dox
      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    )
    IF (DOCUMENTATION_HTML_TARZ)
      ADD_CUSTOM_COMMAND (
        OUTPUT html.tar.gz
        COMMAND ${TAR} ARGS -cz -f html.tar.gz html
        DEPENDS html/index.html
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
      )
      INSTALL (FILES html.tar.gz DESTINATION "${INSTALL_DOC_DIR}")
    ENDIF (DOCUMENTATION_HTML_TARZ)
  ENDIF (DOXYGEN_EXECUTABLE)
ENDIF (BUILD_DOCUMENTATION)
