IF (BUILD_DOCUMENTATION)
  IF (DOXYGEN_EXECUTABLE)
    IF (DOXYGEN_DOT_EXECUTABLE)
      SET (DOT YES)
    ELSE (DOXYGEN_DOT_EXECUTABLE)
      SET (DOT NO)
    ENDIF (DOXYGEN_DOT_EXECUTABLE)
    IF (PRIVATE_RELEASE)
#      SET (DOXYGEN_EXCLUDE_PATTERNS "*.c* *.h* *.java* *.idl*")
      SET (DOXYGEN_SOURCE_BROWSER NO)
      SET (DOXYGEN_CALL_GRAPH NO)
      SET (DOXYGEN_CALLER_GRAPH NO)
    ELSE (PRIVATE_RELEASE)
      SET (DOXYGEN_SOURCE_BROWSER YES)
      SET (DOXYGEN_CALL_GRAPH YES)
      SET (DOXYGEN_CALLER_GRAPH YES)
    ENDIF (PRIVATE_RELEASE)
    CONFIGURE_FILE (
      "${CMAKE_CURRENT_BINARY_DIR}/Doxyfile.template"
      "${CMAKE_CURRENT_BINARY_DIR}/Doxyfile"
      !ONLY
    )
    IF (DOCUMENTATION_HTML_TARZ)
      ADD_CUSTOM_TARGET (
        doc ALL
        DEPENDS html/index.html
        DEPENDS macroscope-doc-html.tar.gz
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
      )
    ELSE (DOCUMENTATION_HTML_TARZ)
      ADD_CUSTOM_TARGET (
        doc ALL
        DEPENDS html/index.html
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
      )
    ENDIF (DOCUMENTATION_HTML_TARZ)
    ADD_CUSTOM_COMMAND (
      OUTPUT html/index.html
      COMMAND ${DOXYGEN_EXECUTABLE}
      DEPENDS Doxyfile
      DEPENDS mainpage.dox
      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    )
    IF (DOCUMENTATION_HTML_TARZ)
      ADD_CUSTOM_COMMAND (
        OUTPUT macroscope-doc-html.tar.gz
        COMMAND ${TAR} ARGS -cz -f macroscope-doc-html.tar.gz html
        DEPENDS html/index.html
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
      )
      INSTALL (FILES macroscope-doc-html.tar.gz DESTINATION "${INSTALL_DOC_DIR}")
    ENDIF (DOCUMENTATION_HTML_TARZ)
  ENDIF (DOXYGEN_EXECUTABLE)
ENDIF (BUILD_DOCUMENTATION)
