ADD_EXECUTABLE (macroscope
  macroscope.cpp
  htmlrep.cpp
  bpfthtml.cpp
  version.c
)


TARGET_LINK_LIBRARIES (macroscope
  adicpp
  fbcpp
  ksys
  mycpp
  utf8
  ${LIBPDBUTILS}
)

SET_SOURCE_FILES_PROPERTIES (version.c PROPERTIES GENERATED YES)

ADD_CUSTOM_COMMAND (
  OUTPUT version.c
  COMMAND ${VERSION_EXECUTABLE} version.in version.c
  DEPENDS version.in
  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
)

GET_TARGET_PROPERTY (MACROSCOPE_EXECUTABLE macroscope LOCATION)

FIND_PROGRAM (ICCPATCH iccpatch)
IF (ICCPATCH AND CMAKE_CXX_COMPILER MATCHES icl)
  ADD_CUSTOM_COMMAND (
    TARGET macroscope POST_BUILD
    COMMAND ${ICCPATCH} ARGS ${MACROSCOPE_EXECUTABLE}
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    COMMENT ""
  )
ENDIF (ICCPATCH AND CMAKE_CXX_COMPILER MATCHES icl)

FIND_PROGRAM (UPX upx)

IF (PRIVATE_RELEASE AND NOT CMAKE_BUILD_TYPE MATCHES Deb AND NOT CMAKE_GENERATOR MATCHES Win64 AND CMAKE_SYSTEM_NAME MATCHES Windows)
  IF (UPX)
    ADD_CUSTOM_COMMAND (
      TARGET macroscope POST_BUILD
      COMMAND ${UPX} ARGS -q --brute ${MACROSCOPE_EXECUTABLE}
      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
      COMMENT ""
    )
  ENDIF (UPX)
ENDIF (PRIVATE_RELEASE AND NOT CMAKE_BUILD_TYPE MATCHES Deb AND NOT CMAKE_GENERATOR MATCHES Win64 AND CMAKE_SYSTEM_NAME MATCHES Windows)

INSTALL (
  TARGETS macroscope RUNTIME
  DESTINATION "${INSTALL_BIN_DIR}"
)

INSTALL (FILES macroscope.conf DESTINATION "${INSTALL_ETC_DIR}" RENAME macroscope.conf.template)
INSTALL (FILES mysql-script DESTINATION "${INSTALL_ETC_DIR}" RENAME mysql-script)
INSTALL (FILES mysql-user DESTINATION "${INSTALL_ETC_DIR}" RENAME mysql-user)
